--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -9,7 +9,7 @@
     border: 1px solid #1b1919;
     border-radius: 5px;
     padding: 20px;
-    background-color: #4d4747;
+    background-color: #bbaeae;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
