--- a/src/components/Auth/signIn.css
+++ b/src/components/Auth/signIn.css
@@ -38,9 +38,9 @@
   }
   
   button {
-    width: 100%;
+    width: 15em;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #86398F;
     color: white;
     border: none;
     border-radius: 5px;
